--- a/style.css
+++ b/style.css
@@ -1,8 +1,56 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
   border: none;
   outline: none;
   text-decoration: none;
-  
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+
+:root {
+  --bg-color: #F7F6F2;
+  --text-color: #111;
+  --second-text-color: #787878;
+  --main-color: #1fa356f1;
+}
+
+/* header section style */
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 9%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 100;
+}
+
+.logo img {
+  width: 130px;
+}
+
+.navbar a {
+  font-size: 16px;
+  color: var(--text-color);
+  margin: 0 15px;
+  font-weight: 500;
+  transition: .3s;
+}
+
+.navbar a:hover {
+  color: var(--main-color);
+}
+
+.btn {
+  padding: 12px 20px;
+  background: var(--main-color);
+  color: var(--bg-color);
+  border-radius: 5px;
+  font-weight: 600;
 }
