--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 :root {
   --bg-color: #F7F6F2;
   --text-color: #111;
+  --white-color: #fff;
   --second-text-color: #787878;
   --main-color: #1fa356f1;
 }
@@ -48,9 +49,100 @@
 }
 
 .btn {
-  padding: 12px 20px;
+  padding: 10px 20px;
   background: var(--main-color);
-  color: var(--bg-color);
+  color: var(--white-color);
   border-radius: 5px;
+  border: 2px solid var(--main-color);
+  cursor: pointer;
+  font-weight: 500;
+  overflow: hidden;
+  z-index: 1;
+  transition: .5s;
+}
+
+.btn:hover {
+  background: none;
+  color: var(--main-color);
+}
+
+
+
+/* home section style */
+.home {
+  position: relative;
+  width: 100%;
+  background: linear-gradient(rgba(0, 0, 0, .2)), url(./assets/hero-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 100px 0 200px;
+  padding: 120px 0 200px;
+}
+
+.home-content .access-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: var(--white-color);
+  max-width: max-content;
+  margin: 0 auto;
+  padding: 4px 8px;
+  border-radius: 20px;
+  margin-bottom: 10px;
+}
+
+.access-btn input {
+  margin-right: 5px;
+}
+
+.access-btn input, label {
+  color: var(--main-color);
+  font-size: 12px;
   font-weight: 600;
 }
+
+.home-content .same {
+  font-size: 56px;
+  color: var(--white-color);
+}
+
+.home-content .same.main {
+  color: var(--main-color);
+}
+
+.home-content p {
+  color: var(--white-color);
+  font-size: 14px;
+  line-height: 1.6;
+}
+
+.home-btn {
+  margin-top: 35px;
+}
+
+.home-btn .btn {
+  margin: 0 5px;
+}
+
+.home-btn .btn:nth-child(2) {
+  background: transparent;
+  border-color: var(--white-color);
+  color: var(--white-color);
+}
+
+.home-btn .btn:nth-child(2):hover {
+  background: var(--white-color);
+  color: var(--main-color);
+  border-color: var(--white-color);
+}
+
+.home-btn a i {
+  vertical-align: middle;
+  margin: 0 5px;
+}
+
